--- a/iletisim.html
+++ b/iletisim.html
@@ -5,6 +5,7 @@
     <title>İletişim - Ata Dinçel</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <link rel="icon" href="https://i.imgur.com/e0hr1fm.jpg" type="image/jpeg">
      <style>
 body.dark-mode {
             background-color: #121212;
