--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Ata'nın Web Sayfası</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="https://i.imgur.com/e0hr1fm.jpg" type="image/jpeg">
     <style>
         /* --- Temel Stil --- */
         html, body {
