--- a/projeler.html
+++ b/projeler.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Projeler - Ata Dinçel</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://i.imgur.com/e0hr1fm.jpg" type="image/jpeg">
     <style>
 body.dark-mode {
             background-color: #121212;
